# ydjs-projects

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README-backup.md  README.md  README2.md  README_M1.md  README_M3.md  _.sh  comp1  comp2  how_to_distro_mobile.md  how_to_gitignore.md  how_to_use_claude.md  iOS_Binary_Distribution_with_Kotlin_Multiplatform_KMP.md  run.sh  settings.gradle.kts
.github/workflows/: release.yml  test.yml
Assets/Animations/: Elevator.controller  M206Elevator.anim  Minion Forward Turn Left.anim  Minion Forward Turn Right.anim  Minion Forward.anim  Minion Idle Turn Left 90.anim
Assets/AnimatorControllers/: SimpleAnimatorController.controller  SimpleAnimatorController_NO_ROOT_MOTION.controller
Assets/Materials/: Green.mat  Orange.mat  Purple.mat  Transparent.mat
Assets/Prefabs/: M205ChainLink.prefab
Assets/Scenes/: GameMenuScene.unity  demo.unity  demo_m2.unity  demo_m3.unity  demo_m4.unity
JSvanilla/: README.md  app.js  package.json
JSvanilla/public/: index.html  linker.html
JVlwjgl/: Dockerfile
JVlwjgl/app/: build.gradle.kts
JVswing/: settings.gradle.kts
JVswing/app/: build.gradle.kts
ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
app/: build.gradle.kts
coding-oop/: OOP01.md  backup.md
coding-python/: ap_quiz_package01.py  ap_quiz_package02.py  ap_quiz_package03-ans.py  ap_quiz_package04.py  q100.py  q61.py  q62.py  q63.py  q64.py  q65.py  q66.py  q67.py  q68.py  q69.py  q70.py  q71.py  q72.py  q73.py  q74.py  q75.py  q76.py  q77.py  q78.py  q79.py  q80.py  q81.py  q82.py  q83.py  q84.py  q85.py  q86.py  q87.py  q88.py  q89.py  q90.py  q91.py  q92.py  q93.py  q94.py  q95.py  (+4 more)
coding-python-recursion/: cli.py  exponentiation_by_squaring.md  q01.py  q02.py  q03.py  q04.py  q05.py  q06.py  q07.py  q08.py  q09.py  q10.py  q11.py  q12.py  q13.py  q14.py  q15.py  q16.py  q17.py  q18.py  q19.py  q20.py  q21.py  q22.py  q23.py  q24.py  q25.py  q26.py  q27.py  q28.py  q29.py  q30.py  q31.py  q32.py  q33.py  q34.py  q35.py  q36.py  q37.py  q38.py  (+2 more)
jayden-latex/: chinese00.tex  chinese01.tex  main.tex
jayden-math/: .gitignore  chem.tex  main.tex  vid.py
jayden-python/: ap_quiz_package01.py  ap_quiz_package02.py  ap_quiz_package03.py  ap_quiz_package04.py  ap_quiz_package05.py  ap_quiz_package06.py
jayden-python-cam_motion/: README.md  motion.py
jayden-python_practice/: ap_quiz_package03.py  ap_quiz_package05.py  ap_quiz_package06.py
pro03/: settings.gradle.kts
pro03/app/: build.gradle.kts
pro05/: settings.gradle.kts
pro05/app/: build.gradle.kts
pro06/: settings.gradle.kts
pro06/app/: build.gradle.kts
pro07/: settings.gradle.kts
pro07/app/: build.gradle.kts
pro08/: settings.gradle.kts
pro08/app/: build.gradle.kts
pro1/: settings.gradle.kts
pro1/app/: build.gradle.kts
pro4/: settings.gradle.kts
pro4/app/: build.gradle.kts
python-pdf_manager/: .gitignore
src/: main.cpp
std01-MusicSampleTest/: local.properties  settings.gradle.kts
std01-MusicSampleTest/gradle/: libs.versions.toml
std01-README/: README.md
std01-Test/: local.properties
std01-java-SwingApp/: App.kt  ComponentPractice.java  DecoratorDemo.java  DecoratorDemo.kt  DecoratorPractice.java  DecoratorPractice.kt  FacadePractice.java  SwingApp.java  SwingAppWithFactory.java  TestApp.java  TestAppController.java  TestAppModel.java  TestAppView.java  facade_practice.py
std01-kot-MusicSampleTest/app/: build.gradle.kts
std01-kot-MusicYTDL/: .gitignore  README.md  local.properties
std01-kot-MusicYTDL-backup/: .gitignore  README.md  settings.gradle.kts
std01-python-stockpredict/: main.py  youtube_downloader.py
(+259 files in other folders)
